re PR middle-end/18231 (Nested inline function not inlined)

2004-11-03  Andrew Pinski  <pinskia@physics.uc.edu>

        PR tree-opt/18231
        * tree.c (staticp) <case FUNCTION_DECL>: Nested functions are static
        also.

From-SVN: r90033